# hstrs

./: .gitignore  README.md  hstrs.cabal  shell.nix
src/: Main.hs  Options.hs
