name:                hstrs
version:             0.1.0.0
description:         A modern alternative for strings, in Haskell
homepage:            https://github.com/jmorag/hstrs#readme
license:             CC0-1.0
license-file:        LICENSE
author:              Joseph Morag
maintainer:          jm4157@columbia.edu
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hstrs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Options
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       optparse-applicative
                           
